# news-agent

./: .gitignore  Marketing Research Plan.md  README.md  Requirement List.md  pyproject.toml
docs/: Marketing Research Report.md  Vibe Coding Development Plan.md  hl-data-ingestion-development-plan.md  smart_wallet_strategy_backtest.md  trading_strategies_report.md
script/: generate_smart_wallet_strategy_report.py  generate_trading_strategies_report.py  get_binance_btc_1h_history.py
src/news_agent/: __init__.py  alerting.py  cli.py  engine.py  export_hyperliquid_positions.py  hyperliquid.py  ingestion.py  live_sources.py  models.py  normalization.py  personalization.py  scoring.py
tests/: test_engine.py  test_hyperliquid.py  test_live_ingestion.py  test_normalization.py  test_personalization.py
